# jet-meal

./: .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: billing-tests.yaml  businesses-codegen-validate.yaml  businesses-tests.yaml  ci.yaml  fio-router-tests.yaml
api/graphql/: schema.graphqls
docs/: architecture.md  requirements.md  use_cases.md
docs/adr/: 01.order-changed-topic.md  02.microfrontends-ssr-like-structure.md  03.data-format-graphql.md
frontend/: biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.bff.json  tsconfig.checks.json  tsconfig.esm-package.json  tsconfig.ssr.json
frontend/.cursor/rules/: jet-meal-repo.mdc  typescript-structure-and-env.mdc
frontend/services/restaurant-bff/: package.json  tsconfig.json
frontend/services/restaurant-ssr/: next.config.ts  package.json  tsconfig.json
libraries/: Makefile
libraries/c/facil-io-router/: CMakeLists.txt  README.md
libraries/c/facil-io-router/include/: fio_router.h
libraries/c/facil-io-router/sample-service/: README.md
libraries/c/facil-io-router/sample-service/src/: main.c
libraries/c/facil-io-router/src/: config.h  fio_router.c
libraries/c/facil-io-router/tests/: tests.bats
libraries/c/jet-postgres-orm/: CMakeLists.txt
libraries/c/jet-postgres-orm/include/: jet_postgres_orm.h
libraries/c/jet-postgres-orm/src/: jet_postgres_orm.c
libraries/c/jetenv/: CMakeLists.txt  Makefile
libraries/c/jetenv/include/: jetenv.h
libraries/c/jetenv/sample-service/src/: main.c
libraries/c/jetenv/src/: jetenv.c
libraries/c/jetenv/tests/: tests.bats
libraries/cpp/: Makefile
libraries/cpp/penguin_malloc/: CMakeLists.txt  Makefile  README.md
libraries/cpp/penguin_malloc/include/: penguin_malloc.h
libraries/cpp/penguin_malloc/src/: buddy.c  buddy.h  buddy_util.c  buddy_util.h  config.h  freelist.c  freelist.h  new.cpp  penguin_malloc.c  pfalloc.c  pfalloc.h  slab.c  slab.h  util.c  util.h
libraries/cpp/penguin_malloc/tests/: buddy_test.cpp  buddy_util_test.cpp  freelist_test.cpp  mem_test_util.cpp  mem_test_util.h  new_test.cpp  penguin_malloc_tests.cpp  slab_test.cpp  util_test.cpp
scripts/openapi-c-gen/: codegen_generator.py  codegen_item_base.py  codegen_item_cleanup.py  codegen_item_parse.py  codegen_item_serialize.py  codegen_item_struct.py  errors.py  main.py  primitives.c  type_utils.py
services/: Makefile
services/billing/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yaml
services/billing/docs/: api.yaml
services/billing/migrations/: 001_create_invoices.sql  002_create_balances.sql
services/billing/src/: config.hpp  main.cpp
services/billing/src/handlers/: balance_handler.cpp  balance_handler.hpp  invoice_handler.cpp  invoice_handler.hpp
services/billing/src/models/: balance.hpp  invoice.hpp
services/billing/src/repository/: repository_error.hpp
services/billing/src/repository/balance/: balance_repository.hpp  pg_balance_repository.cpp  pg_balance_repository.hpp
services/billing/src/repository/invoices/: invoice_repository.hpp  pg_invoice_repository.cpp  pg_invoice_repository.hpp
services/billing/src/service/: payment_service.cpp  payment_service.hpp
services/billing/tests/: conftest.py  docker-compose.yaml  test_balance.py  test_invoices.py
services/businesses/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.sanitizer.yml  docker-compose.yml  makefile
services/businesses/docs/: api.yaml
services/businesses/src/: codegen_api.c  codegen_api.h  config.h  dispatch.c  dispatch.h  handlers.c  handlers.h  irepository.h  main.c  postgres.c  postgres.h
services/businesses/tests/: docker-compose.yml  service_client.sh  v1_business.bats  v1_meal.bats
services/order/: Dockerfile  build.gradle.kts  docker-compose.yml
services/shdb/: .clang-tidy  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml  test.sh
services/shdb/docs/: api.yaml
services/shdb/src/: accessors.cpp  accessors.h  aggregate_function.cpp  aggregate_function.h  ast.cpp  ast.h  ast_visitor.cpp  ast_visitor.h  btree.cpp  btree.h  btree_page.cpp  btree_page.h  bufferpool.cpp  bufferpool.h  cache.h  catalog.cpp  catalog.h  comparator.cpp  comparator.h  config.h  database.cpp  database.h  db.h  executor.cpp  executor.h  expression.cpp  expression.h  file.cpp  file.h  fixed.cpp  fixed.h  flexible.cpp  flexible.h  index.cpp  index.h  index_table.cpp  index_table.h  interpreter.cpp  interpreter.h  lexer.cpp  (+25 more)
services/shdb/tests/: CMakeLists.txt  bp_1_clock_test.cpp  bp_2_scan_test.cpp  bp_3_schema_test.cpp  bp_4_meta_test.cpp  btree_1_layout.cpp  btree_2_insert_lookup.cpp  btree_3_remove.cpp  btree_4_scan.cpp  sql_1_ddl.cpp  sql_2_expr.cpp  sql_3_insert.cpp  sql_4_select.cpp  sql_5_sort.cpp  sql_6_join.cpp  sql_7_group_by.cpp  sql_8_range_inference.cpp
services/user_service/: Cargo.toml  Dockerfile  Makefile  build.rs  docker-compose.testing.yaml
services/user_service/.cargo/: config.toml
services/user_service/config/: config.toml
services/user_service/docs/: api.yaml
services/user_service/migrations/: 20260412133726_create_users_table.sql  20260412172155_create_refresh_tokens_table.sql
services/user_service/src/: config.rs  database.rs  dto.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  openapi.rs  repositories.rs  routes.rs  services.rs  state.rs
services/user_service/src/dto/: auth_requests.rs  auth_responses.rs  common.rs  response.rs  user_requests.rs  user_responses.rs
services/user_service/src/errors/: api_error.rs  domain_error.rs  repository_error.rs
services/user_service/src/handlers/: auth_handlers.rs  user_handlers.rs
services/user_service/src/repositories/: refresh_token_repository.rs  repository_traits.rs  user_repository.rs
services/user_service/src/routes/: auth_routes.rs  openapi_routes.rs  user_routes.rs
services/user_service/src/services/: auth_service.rs  security_service.rs  user_service.rs
services/user_service/tests/: integration_test.rs
services/user_service/tests/endpoints/: auth_endpoints.rs  helpers.rs  module.rs  user_endpoints.rs
(+30 files in other folders)
