[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
