[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
config = "0.15.22"

utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
serde_yaml = "0.9"

chrono = "0.4.44"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
rand = "0.10.1"
serde_json = "1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
